# queimad-ai

./: .gitignore  .npmrc  CHANGELOG.md  QUICKSTART-NEW.md  QUICKSTART-WINDOWS.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.ps1  setup.sh  test_api.py
ai-core/: Dockerfile  README.md  config.py  detect.py  main.py  pyproject.toml  requirements.txt  setup.py  test_collector.py  video_ui.py
ai-core/legacy/: README.md  quick_train.py  test_model.py
ai-core/models/: .gitkeep  README.md
ai-core/notebooks/: googlecolab_model_training.md  googlecolab_test_model.md
ai-core/runs/detect/fire_detection_yolo/: args.yaml
ai-core/scripts/: collect_inpe_data.py
ai-core/src/: README.md  __init__.py  fire_detector.py  test_trained_model.py  video_processor.py  yolo_fire_detection.py
ai-core/tools/: annotation_tool.py
api/: .env.example  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml  test-api.js  tsconfig.json
api/scripts/: init-db.js
api/src/: index.ts
api/src/middleware/: errorHandler.ts
api/src/routes/: detect.ts  health.ts
api/src/services/: DatabaseService.ts  DetectionService.ts
api/src/types/: detection.ts  errors.ts
api/src/utils/: logger.ts
db-init/: 01-init-schema.sh
docs/: DATABASE-STRATEGY.md  DATASET-STRATEGY.md  MVP-STRATEGY-NEW.md  MVP-STRATEGY.md
