[project]
name = "ai-core"
version = "0.1.0"
description = "AI-Model for predicting Wildfires"
authors = [
    {name = "Guilherme Soares",email = "soaresgui.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.20.0,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
